src/objects/Quote_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>product__c</referenceTo>
        <relationshipLabel>QuoteLines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Standard</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>QuoteLines (Quote Standard)</relationshipLabel>
        <relationshipName>QuoteLines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Quote Line Item</label>
    <nameField>
        <label>Quote Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QuoteLines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>